--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description:
 logo: cats.jpg
 search: true
-url: http://127.0.0.1:4000
+baseurl: toomanycats
 
 # Jekyll configuration
 
