--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description:
 logo: cats.jpg
 search: true
-baseurl: toomanycats
+url: https://toomanycats.github.io
 
 # Jekyll configuration
 
