--- a/_config.yml
+++ b/_config.yml
@@ -38,11 +38,16 @@ mathjax: true
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", ".less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md", "vendor"]
 
+authors:
+    toomanycats:
+        display_name: TooManyCats
+        avataor: ower_avatar.png
+        email: dpcuneo@fastmail.fm
 
 # Site owner
 owner:
   name: Toomanycats
-  avatar: cats.jpg
+  avatar: owner_avatar.png
   email: dpcuneo@fastmail.fm
   disqus-shortname:
   twitter: #username
