--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description:
 logo: cats.jpg
 search: true
-#url: https://toomanycats.github.io
+url: https://toomanycats.github.io
 editor: vim
 
 # Jekyll configuration
