--- a/_config_local.yml
+++ b/_config_local.yml
@@ -6,6 +6,7 @@ description:
 logo: cats.jpg
 search: true
 editor: vim
+url: localhost
 
 # Jekyll configuration
 
@@ -15,7 +16,7 @@ highlighter: rouge
 sass:
   sass_dir: _sass
   style: compressed
-gems:
+plugins:
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
@@ -51,7 +52,7 @@ owner:
   disqus-shortname:
   twitter: #username
   facebook: #username
-  github: #username
+  github: toomanycats
   stackexchange: #http://stackoverflow.com/users/123456/username
   linkedin: #username
   instagram: #username
